# editorcrew

./: .gitignore  README.md  pyproject.toml
output/: article_critique.md  article_rating.md  improved_article.md  original_article.md
src/editor_crew/: crew.py  main.py
src/editor_crew/config/: agents.yaml  tasks.yaml
