[project]
name = "editor_crew"
version = "0.1.0"
description = "editor-crew using crewAI"
authors = [{ name = "Hemanth HM", email = "hemanth.hm@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
editor_crew = "editor_crew.main:run"
run_crew = "editor_crew.main:run"
train = "editor_crew.main:train"
replay = "editor_crew.main:replay"
test = "editor_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
